# jules-agentic-software-builder-for-claude

./: .gitignore  CLAUDE.md  pyproject.toml
.claude/agents/: accessibility-checker.md  api-client-generator.md  api-designer.md  architect-backend.md  architect-data.md  architect-frontend.md  architect-infrastructure.md  architect-mobile.md  architect-system.md  assessment-generator.md  asset-optimizer.md  background-remover.md  ci-pipeline-generator.md  cli-ux-designer.md  code-documentation-generator.md  color-palette-extractor.md  complexity-analyzer.md  component-generator.md  content-generator.md  content-researcher.md  content-schema-designer.md  content-sourcer.md  content-taxonomy-designer.md  content-validator.md  controller-generator.md  data-modeler.md  dependency-auditor.md  design-system-creator.md  dockerfile-generator.md  e2e-test-generator.md  env-config-generator.md  icon-generator.md  image-editor.md  image-generator.md  integration-test-generator.md  k8s-manifest-generator.md  learning-path-designer.md  lint-analyzer.md  localization-generator.md  logo-generator.md  (+23 more)
.claude/skills/: orchestrator.md
agentic_builder/: main.py
agentic_builder/agents/: configs.py  fast_configs.py  (+1 more)
docs/: architecture.md  discovery-driven-architecture.md  orchestrator-architecture.md  performance-optimization.md  sub-agent-mappings.md
prompts/: common_schema.xml
tests/: test_agents.py  test_cli.py  test_common.py  test_e2e.py  test_fixes.py  test_integration.py  test_orchestration.py  test_performance_optimizations.py  test_pms.py  test_workflows.py
(+93 files in other folders)
